// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/google/exposure-notifications-server/internal/pb;pb";

message FederationFetchRequest {
	string fetchType = 1; // required
	repeated string regionIdentifiers = 2;
	repeated string excludeRegionIdentifiers = 3;
	int64 lastFetchResponseKeyTimestamp = 4; // required

	// regionIdentifiers, excludeRegionIdentifiers, lastFetchResponseKeyTimestamp must be stable to send a fetchToken.
	string nextFetchToken = 5;
}

message FederationFetchResponse {
	repeated ContactTracingResponse response = 1;
	bool partialResponse = 2; // required
	string nextFetchToken = 3; // nextFetchToken will be present if partialResponse==true
	int64 fetchResponseKeyTimestamp = 4; // required
}

message ContactTracingResponse {
	repeated ContactTracingInfo contactTracingInfo = 1;
	repeated string regionIdentifiers = 2;
}

message ContactTracingInfo {
  // Transmission risk is an integer with valid values from 1-8.
	int32 transmissionRisk = 1;  // required
	repeated ExposureKey exposureKeys = 2;
}

message ExposureKey {
	bytes exposureKey = 1; // required
	int32 intervalNumber = 2; // required
	int32 intervalCount = 3; // required
}

service Federation {
	rpc Fetch (FederationFetchRequest) returns (FederationFetchResponse) {}
}
